--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ isort = "^6.0.1"
 mypy = "^1.16.0"
 flake8 = "^7.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+
 [tool.black]
 # Максимальная длина строки
 line-length = 119
